test/sh/error/func/shadowed_param.sk
x := 0

f(x: int) int {
	return x
}